overflow fix on footer

--- a/style/style.css
+++ b/style/style.css
@@ -558,6 +558,8 @@ main {
 }
 /* *FOOTER */
 footer {
+  position: relative;
+  overflow: hidden;
   /* padding: 3rem 6rem; */
   padding: 3rem 0;
   background-color: var(--drk-clr);
